Add script to replace base_url

--- a/angular.json
+++ b/angular.json
@@ -52,8 +52,8 @@
                 }
               ],
               "outputHashing": "all",
-              "baseHref": "/bhupin33/adk-ui/",
-              "deployUrl": "/bhupin33/adk-ui/"
+              "baseHref": "http://localhost/bhuphin3333/adk-ui/",
+              "deployUrl": "http://localhost/bhuphin3333/adk-ui/"
             },
             "development": {
               "optimization": false,
