--- a/nginx/default.var.conf
+++ b/nginx/default.var.conf
@@ -7,19 +7,19 @@ server {
     index index.html;
 
     # Write replaceable variable for /bhupin33/adk-ui
-    location ~* ^http://localhost/bhuphin3333/adk-ui/([^/]+\.[^/]+)$ {
-        rewrite ^http://localhost/bhuphin3333/adk-ui/(.+)$ /$1 break;
+    location ~* ^__BASE_URL__([^/]+\.[^/]+)$ {
+        rewrite ^__BASE_URL__(.+)$ /$1 break;
         root /usr/share/nginx/www;
         try_files $uri =404;
     }
 
     # Write replaceable variable for /bhupin33/adk-ui
-    location http://localhost/bhuphin3333/adk-ui/assets/ {
+    location __BASE_URL__assets/ {
         alias /usr/share/nginx/www/assets/;
         try_files $uri $uri/ =404;
     }
 
-    location http://localhost/bhuphin3333/adk-ui/ {
+    location __BASE_URL__ {
         alias /usr/share/nginx/www/;
         try_files $uri $uri/ /index.html;
     }
